# openfst

./: .bazelrc  .cmake-format.yaml  .gitignore  BUILD.bazel  CMakeLists.txt  COPYING  LICENSE  MODULE.bazel  NEWS  README  README.md  WORKSPACE.bazel  configure.ac
.github/workflows/: bazel_arm64_macos.yml  bazel_x64_linux.yml  bazel_x64_windows.yml
cmake/: OpenFstConfig.cmake.in
docs/: advanced_usage.md  arc_map.md  arc_sort.md  background.md  closure.md  compose.md  concat.md  connect.md  conventions.md  determinize.md  difference.md  disambiguate.md  efficiency.md  encode_decode.md  eps_normalize.md  equal.md  equivalent.md  examples.md  expectation_plus.md  extensions.md  glossary.md  hlt_2009_tutorial.md  intersect.md  invert.md  isomorphic.md  minimize.md  mpdt_extension.md  pdt_extension.md  project.md  prune.md  push.md  python_extension.md  quick_tour.md  rand_equivalent.md  rand_gen.md  relabel.md  replace.md  reverse.md  reweight.md  rm_epsilon.md  (+10 more)
openfst/: CMakeLists.txt
openfst/benchmark/: BUILD.bazel  CMakeLists.txt  compact_test.cc  compose_test.cc  connect_test.cc  determinize_test.cc  fst_test.cc  memory_test.cc  minimize_test.cc  serialize_test.cc  shortest_path_test.cc  symbol-table_test.cc  weight_test.cc
openfst/compat/: BUILD.bazel  CMakeLists.txt  compat.cc  compat.h  compat_memory.h  compat_memory_test.cc  file_path.cc  file_path.h  file_path_test.cc  init.cc  init.h  init_test.cc  status_macros.h  status_macros_test.cc
openfst/extensions/: CMakeLists.txt
openfst/extensions/categorial/: BUILD.bazel  CMakeLists.txt  categorial-weight.h  weight_test.cc
openfst/extensions/compact/: BUILD.bazel  CMakeLists.txt  compact16_acceptor-fst.cc  compact16_string-fst.cc  compact16_unweighted-fst.cc  compact16_unweighted_acceptor-fst.cc  compact16_weighted_string-fst.cc  compact64_acceptor-fst.cc  compact64_string-fst.cc  compact64_unweighted-fst.cc  compact64_unweighted_acceptor-fst.cc  compact64_weighted_string-fst.cc  compact8_acceptor-fst.cc  compact8_string-fst.cc  compact8_unweighted-fst.cc  compact8_unweighted_acceptor-fst.cc  compact8_weighted_string-fst.cc
openfst/extensions/compress/: BUILD.bazel  CMakeLists.txt  compress.h  compress_test.cc  compressscript.cc  compressscript.h  elias.h  fstcompress-main.cc  fstcompress.cc  fstquantize.cc  fstrandmod.cc  quantize_weights.cc  quantize_weights.h  quantize_weights_test.cc  randmod.h  randmod_test.cc
openfst/extensions/const/: BUILD.bazel  CMakeLists.txt  const16-fst.cc  const64-fst.cc  const8-fst.cc
openfst/extensions/far/: BUILD.bazel  CMakeLists.txt  compile-strings.cc  compile-strings.h  convert-main_test.sh  convert.h  create.h  encode-main_test.sh  encode.h  equal-main_test.sh  equal.h  extract.h  far-class.cc  far-class.h  far.cc  far.h  far_test.cc  farcompilestrings-main.cc  farcompilestrings.cc  farconvert-main.cc  farconvert.cc  farcreate-main.cc  farcreate.cc  farencode-main.cc  farencode.cc  farequal-main.cc  farequal.cc  farextract-main.cc  farextract.cc  farinfo-main.cc  farinfo.cc  farisomorphic-main.cc  farisomorphic.cc  farlib.h  farprintstrings-main.cc  farprintstrings.cc  farscript.cc  farscript.h  getters.cc  getters.h  (+11 more)
openfst/extensions/far/testdata/: strings.sttable.far  test1.sttable.far
openfst/extensions/linear/: BUILD.bazel  CMakeLists.txt  fstlinear-main.cc  fstlinear.cc  fstloglinearapply-main.cc  fstloglinearapply.cc  linear-classifier-fst.cc  linear-fst-data-builder.h  linear-fst-data.h  linear-fst-data_test.cc  linear-fst.h  linear-fst_test.cc  linear-tagger-fst.cc  linearscript.cc  linearscript.h  loglinear-apply.h  trie.h  trie_test.cc
openfst/extensions/lookahead/: BUILD.bazel  CMakeLists.txt  arc_lookahead-fst.cc  ilabel_lookahead-fst.cc  olabel_lookahead-fst.cc
openfst/extensions/mpdt/: BUILD.bazel  CMakeLists.txt  compose.h  compose_test.cc  expand.h  expand_test.cc  info.h  mpdt.h  mpdt_test.cc  mpdtcompose-main.cc  mpdtcompose.cc  mpdtexpand-main.cc  mpdtexpand.cc  mpdtinfo-main.cc  mpdtinfo.cc  mpdtlib.h  mpdtreverse-main.cc  mpdtreverse.cc  mpdtscript.cc  mpdtscript.h  read_write_utils.h  reverse.h  reverse_test.cc
openfst/extensions/ngram/: BUILD.bazel  CMakeLists.txt  benchmark_test.cc  bitmap-index.cc  bitmap-index.h  bitmap-index_test.cc  compact-louds-tree-fst.h  compact-louds-tree-fst_test.cc  louds-tree.h  louds-tree_test.cc  ngram-fst.cc  ngram-fst.h  ngram-fst_test.cc  nthbit.cc  nthbit.h  nthbit_test.cc
openfst/extensions/pdt/: BUILD.bazel  CMakeLists.txt  collection.h  collection_test.cc  compose.h  compose_test.cc  expand.h  expand_test.cc  getters.cc  getters.h  info.h  paren.h  paren_test.cc  pdt.h  pdtcompose-main.cc  pdtcompose.cc  pdtexpand-main.cc  pdtexpand.cc  pdtinfo-main.cc  pdtinfo.cc  pdtlib.h  pdtreplace-main.cc  pdtreplace.cc  pdtreverse-main.cc  pdtreverse.cc  pdtscript.cc  pdtscript.h  pdtshortestpath-main.cc  pdtshortestpath.cc  replace.h  replace_test.cc  reverse.h  reverse_test.cc  shortest-path.h  shortest-path_test.cc
openfst/extensions/python/: BUILD.bazel  CMakeLists.txt  cios.pxd  cmemory.pxd  cpywrapfst.pxd  pywrapfst.pxd  pywrapfst.pyi  pywrapfst.pyx  pywrapfst_test.py
openfst/extensions/so/: BUILD.bazel
openfst/extensions/special/: BUILD.bazel  CMakeLists.txt  fstspecial.cc  phi-fst.cc  phi-fst.h  phi-fst_test.cc  rho-fst.cc  rho-fst.h  rho-fst_test.cc  sigma-fst.cc  sigma-fst.h  sigma-fst_test.cc
openfst/lib/: CMakeLists.txt  accumulator.h  add-on.h  arc-arena.h  arc-map.h  arc.h  arcfilter.h  arcsort.h  bi-table.h  build_rules.bzl  cache.h  cc-visitors.h  closure.h  compact-fst.h  compat-util.h  complement.h  compose-filter.h  compose.h  concat.h  connect.h  const-fst.h  determinize.h  dfs-visit.h  difference.h  disambiguate.h  edit-fst.h  encode.cc  encode.h  epsnormalize.h  equal.h  equivalent.h  error-weight.h  expanded-fst.h  expander-cache.h  expander-fst.h  expectation-weight.h  factor-weight.h  file-stream-status.h  file-util.h  filter-state.h  (+78 more)
openfst/script/: BUILD.bazel  CMakeLists.txt  arc-class.h  arcfilter-impl.h  arciterator-class.cc  arciterator-class.h  arcsort.cc  arcsort.h  (+96 more)
(+460 files in other folders)
